--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,11 @@
 {
-  "tabWidth": 2,
-  "printWidth": 100,
-  "singleQuote": true,
-  "trailingComma": "all",
-  "jsxSingleQuote": true,
-  "jsxBracketSameLine": false,
-  "arrowParens": "always",
-  "bracketSpacing": true,
-  "semi": true,
-  "useTabs": false
+	"tabWidth": 2,
+	"printWidth": 100,
+	"singleQuote": true,
+	"trailingComma": "all",
+	"jsxSingleQuote": true,
+	"jsxBracketSameLine": false,
+	"arrowParens": "always",
+	"bracketSpacing": true,
+	"semi": true
 }
