--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,11 @@
 {
-	"tabWidth": 2,
-	"printWidth": 100,
-	"singleQuote": true,
-	"trailingComma": "all",
-	"jsxSingleQuote": true,
-	"jsxBracketSameLine": false,
-	"arrowParens": "always",
-	"bracketSpacing": true,
-	"semi": true
+    "tabWidth": 2,
+    "printWidth": 100,
+    "singleQuote": true,
+    "trailingComma": "all",
+    "jsxSingleQuote": true,
+    "jsxBracketSameLine": false,
+    "arrowParents": "always",
+    "bracketSpacing": true,
+    "semi": true
 }
